Bug 549614 - [test][12] prepare SwitchExpressionTest to run back-to-back with javac
Change-Id: I8656ac9b503c52c2f0530eb1a44667698b60f35d